--- a/.github/workflows/generate_video.yml
+++ b/.github/workflows/generate_video.yml
@@ -1,168 +1,66 @@
-
 name: Generate Video Pipeline
 
 on:
   workflow_dispatch:
     inputs:
       topic:
-        description: 'The topic for the video'
+        description: 'Video topic'
         required: true
-        default: 'The mysteries of the universe'
-      languages:
-        description: 'Space-separated list of languages (e.g., en pt-br)'
-        required: true
-        default: 'en'
-
-env:
-  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-  PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
-  PYTHON_VERSION: '3.10'
-  ARTIFACTS_DIR: artifacts
-  TOPIC: ${{ github.event.inputs.topic }}
+        default: 'The Mystery of the Library of Alexandria'
 
 jobs:
-  generate-content:
+  generate:
     runs-on: ubuntu-latest
-    outputs:
-      languages: ${{ steps.setup.outputs.languages }}
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
+          python-version: '3.11'
+      
       - name: Install dependencies
         run: |
-          pip install google-generativeai python-dotenv pyyaml requests
-
-      - name: Set up language array
-        id: setup
+          pip install google-generativeai requests pyyaml
+      
+      - name: Test Gemini API
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
-          echo "languages=${{ github.event.inputs.languages }}" >> $GITHUB_ENV
-          echo "::set-output name=languages::'${{ github.event.inputs.languages }}'"
-
-      - name: Generate Scripts and Metadata
+          python -c "
+          import google.generativeai as genai
+          import os
+          genai.configure(api_key=os.environ['GOOGLE_API_KEY'])
+          model = genai.GenerativeModel('gemini-2.0-flash')
+          response = model.generate_content('Say: Hello from The Lost Archives!')
+          print('✅ Gemini API working:', response.text[:100])
+          "
+      
+      - name: Test Pexels API
+        env:
+          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
         run: |
-          # Generate script for each language
-          for lang in ${{ env.languages }}; do
-            python scripts/generate_script.py \
-              --topic "${{ env.TOPIC }}" \
-              --language "$lang" \
-              --output "${{ env.ARTIFACTS_DIR }}/scripts/script_${lang}.txt"
-          done
-
-          # Generate metadata for all languages at once
-          python scripts/generate_metadata.py \
-            --topic "${{ env.TOPIC }}" \
-            --languages ${{ env.languages }} \
-            --output "${{ env.ARTIFACTS_DIR }}/metadata.json"
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+          curl -s -H "Authorization: $PEXELS_API_KEY" \
+            "https://api.pexels.com/videos/search?query=history&per_page=1" | head -c 200
+          echo ""
+          echo "✅ Pexels API working"
+      
+      - name: Generate Script
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        run: |
+          mkdir -p output
+          python scripts/generate_script.py \
+            --topic "${{ inputs.topic }}" \
+            --language "pt-BR" \
+            --output "output/script_pt.txt"
+          echo "--- Script Preview ---"
+          head -20 output/script_pt.txt
+      
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
         with:
-          name: content-artifacts
-          path: ${{ env.ARTIFACTS_DIR }}/
-
-  generate-audio:
-    needs: generate-content
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        language: ${{ fromJson(needs.generate-content.outputs.languages) }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Download Content Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: content-artifacts
-          path: ${{ env.ARTIFACTS_DIR }}/
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          
-      - name: Install dependencies
-        run: |
-          pip install python-dotenv requests pyyaml
-
-      - name: Generate TTS
-        run: |
-          python scripts/generate_tts.py \
-            --input "${{ env.ARTIFACTS_DIR }}/scripts/script_${{ matrix.language }}.txt" \
-            --output "${{ env.ARTIFACTS_DIR }}/audio/narration_${{ matrix.language }}.mp3" \
-            --language $(python -c "import yaml; print(yaml.safe_load(open('config/voices.yaml'))['${{ matrix.language }}']['language_code'])") \
-            --voice $(python -c "import yaml; print(yaml.safe_load(open('config/voices.yaml'))['${{ matrix.language }}']['voice_name'])")
-
-      - name: Upload Audio Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: audio-artifact-${{ matrix.language }}
-          path: ${{ env.ARTIFACTS_DIR }}/audio/narration_${{ matrix.language }}.mp3
-
-  fetch-and-render:
-    needs: [generate-content, generate-audio]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        language: ${{ fromJson(needs.generate-content.outputs.languages) }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install FFmpeg
-        run: sudo apt-get update && sudo apt-get install -y ffmpeg
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          
-      - name: Install dependencies
-        run: |
-          pip install google-generativeai python-dotenv requests
-
-      - name: Download All Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: ${{ env.ARTIFACTS_DIR }}/
-
-      - name: Organize downloaded artifacts
-        run: |
-          # The download-artifact action creates a directory for each artifact
-          # We need to move them to the expected structure
-          mkdir -p ${{ env.ARTIFACTS_DIR }}/audio
-          mv ${{ env.ARTIFACTS_DIR }}/audio-artifact-${{ matrix.language }}/*.mp3 ${{ env.ARTIFACTS_DIR }}/audio/
-          mv ${{ env.ARTIFACTS_DIR }}/content-artifacts/* ${{ env.ARTIFACTS_DIR }}/
-          
-      - name: Fetch Media
-        run: |
-          python scripts/fetch_media.py \
-            --script "${{ env.ARTIFACTS_DIR }}/scripts/script_${{ matrix.language }}.txt" \
-            --output_dir "${{ env.ARTIFACTS_DIR }}/videos" \
-            --videos_per_keyword 2
-
-      - name: Add placeholder background music
-        run: |
-          # In a real scenario, you would have a music file in your repo
-          # or download one. Here we create a silent track as a placeholder.
-          ffmpeg -f lavfi -i anullsrc=r=44100:cl=stereo -t 60 ${{ env.ARTIFACTS_DIR }}/music.mp3
-
-      - name: Render Video
-        run: |
-          python scripts/render_video.py \
-            --clips_dir "${{ env.ARTIFACTS_DIR }}/videos" \
-            --narration "${{ env.ARTIFACTS_DIR }}/audio/narration_${{ matrix.language }}.mp3" \
-            --music "${{ env.ARTIFACTS_DIR }}/music.mp3" \
-            --output "${{ env.ARTIFACTS_DIR }}/final_video_${{ matrix.language }}.mp4"
-
-      - name: Upload Final Video
-        uses: actions/upload-artifact@v3
-        with:
-          name: final-video-${{ matrix.language }}
-          path: ${{ env.ARTIFACTS_DIR }}/final_video_${{ matrix.language }}.mp4
+          name: generated-content
+          path: output/
