--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-google-cloud-texttospeech>=2.14.0
-google-generativeai>=0.3.0
+google-genai>=1.0.0
 requests>=2.28.0
 pyyaml>=6.0
-python-dotenv>=1.0.0
