--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 google-genai>=1.0.0
 google-generativeai>=0.3.0
+python-dotenv>=1.0.0
 requests>=2.28.0
 pyyaml>=6.0
 google-auth-oauthlib>=1.0.0
 google-api-python-client>=2.0.0
+google-cloud-texttospeech>=2.14.0
 Pillow>=10.0.0
