--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ google-auth-oauthlib>=1.0.0
 google-api-python-client>=2.0.0
 google-cloud-texttospeech>=2.14.0
 Pillow>=10.0.0
+fastapi>=0.115.0
+uvicorn>=0.34.0
+supabase>=2.0.0
